<resources>
    <string name="app_name">Fili</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hyphen">-</string>
    <string name="movie">Movie</string>
    <string name="movie_title">Movie Title</string>
    <string name="movie_description">Movie Description</string>
    <string name="_2020">2020</string>
    <string name="_8_5">85%</string>
    <string name="_1249Rating">1,248 Ratings</string>
    <string name="now_playing">Now Playing</string>
    <string name="search">Search</string>
    <string name="search_hint">Movies, TV Series, Peoples</string>
    <string name="empty_notification">Sorry, there is no data</string>
    <string name="settings">Settings</string>
    <string name="title_favorite">Favorite</string>
    <string name="detail">Detail</string>
    <string name="title_main">Main</string>
    <string name="back">Back</string>
    <string name="please_check_your_connection">Please, check your connection</string>
    <string name="daily_reminder_notification">Daily Reminder Notification</string>
    <string name="language">Language</string>
    <string name="daily_reminder_message">Let\'s see what movie playing now!</string>
    <string name="channel_description">Reminder Channel</string>
    <string name="https_github_com_leguna_fili_issues">https://github.com/Leguna/Fili/issues</string>
</resources>