<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/normal"
    tools:context=".ui.settings.SettingsFragment">

    <TextView
        android:id="@+id/tv_title_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textColor="@color/design_default_color_primary_dark"
        android:textSize="@dimen/large_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_language"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small"
        android:drawablePadding="@dimen/normal"
        android:gravity="center_vertical"
        android:minHeight="48dp"
        android:paddingVertical="@dimen/small"
        android:text="@string/language"
        android:textColor="@color/black"
        android:textSize="@dimen/normal_text_size"
        app:drawableStartCompat="@drawable/baseline_language_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_settings" />


    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/sw_daily_reminder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/normal_text_size"
        android:minHeight="48dp"
        android:text="@string/daily_reminder_notification"
        android:textSize="@dimen/normal_text_size"
        app:drawableStartCompat="@drawable/ic_notifications_black_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_language" />

</androidx.constraintlayout.widget.ConstraintLayout>