<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_movie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small"
        android:layout_marginTop="@dimen/small"
        android:layout_marginEnd="@dimen/small"
        android:layout_marginBottom="@dimen/small"
        android:maxWidth="200dp"
        android:maxHeight="200dp"
        app:cardBackgroundColor="@color/cardview_light_background"
        app:cardCornerRadius="@dimen/small"
        app:cardElevation="@dimen/small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/material_dynamic_neutral99">

            <ImageView
                android:id="@+id/iv_movie_poster"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:contentDescription="@string/hyphen"
                android:scaleType="centerCrop"
                app:layout_constraintDimensionRatio="6:9"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_max="160dp"
                app:layout_constraintWidth_min="80dp"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/tv_movie_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small"
                android:layout_marginTop="@dimen/small"
                android:layout_marginEnd="@dimen/small"
                android:text="@string/movie_title"
                android:textColor="@color/material_dynamic_secondary30"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_movie_poster"
                app:layout_constraintTop_toTopOf="@+id/iv_movie_poster" />

            <TextView
                android:id="@+id/tv_movie_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small"
                android:layout_marginTop="@dimen/small"
                android:layout_marginEnd="@dimen/small"
                android:ellipsize="end"
                android:maxLines="5"
                android:text="@string/movie_description"
                android:textColor="@color/material_dynamic_secondary30"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_movie_poster"
                app:layout_constraintTop_toBottomOf="@+id/tv_movie_year" />

            <TextView
                android:id="@+id/tv_movie_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small"
                android:layout_marginTop="@dimen/small"
                android:text="@string/_2020"
                android:textColor="@color/material_dynamic_secondary30"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/iv_movie_poster"
                app:layout_constraintTop_toBottomOf="@+id/tv_movie_title" />


            <TextView
                android:id="@+id/tv_movie_user_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/_1249Rating"
                android:textColor="@color/material_dynamic_secondary30"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/pb_movie"
                app:layout_constraintStart_toEndOf="@+id/pb_movie"
                app:layout_constraintTop_toTopOf="@+id/pb_movie" />

            <TextView
                android:id="@+id/tv_movie_user_rating_value"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center|center_horizontal|center_vertical"
                android:textAlignment="center"
                android:textSize="12sp"
                android:textColor="@color/material_dynamic_neutral40"
                app:layout_constraintBottom_toBottomOf="@+id/pb_movie"
                app:layout_constraintEnd_toEndOf="@+id/pb_movie"
                app:layout_constraintStart_toStartOf="@+id/pb_movie"
                app:layout_constraintTop_toTopOf="@+id/pb_movie"
                tools:text="@string/_8_5" />

            <ProgressBar
                android:id="@+id/pb_movie"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/small"
                android:layout_marginTop="8dp"
                android:indeterminate="false"
                android:max="100"
                android:progress="20"
                android:layout_marginBottom="@dimen/small"
                android:progressDrawable="@drawable/loader"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_movie_poster"
                app:layout_constraintTop_toBottomOf="@+id/tv_movie_description" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>