<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_movie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small"
        android:layout_marginTop="@dimen/small"
        android:layout_marginEnd="@dimen/small"
        android:layout_marginBottom="@dimen/small"
        app:cardBackgroundColor="@color/cardview_light_background"
        app:cardCornerRadius="@dimen/small"
        app:cardElevation="@dimen/small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <ImageView
                android:id="@+id/iv_movie_poster"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:contentDescription="@string/hyphen"
                android:scaleType="centerCrop"
                app:layout_constraintDimensionRatio="6:8"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_min="160dp"
                tools:src="@tools:sample/avatars" />

            <View
                android:id="@+id/v_movie_poster_gradient"
                android:layout_width="0dp"
                android:layout_height="64dp"
                android:background="@drawable/gradient_mask"
                app:layout_constraintBottom_toBottomOf="@+id/iv_movie_poster"
                app:layout_constraintEnd_toEndOf="@+id/iv_movie_poster"
                app:layout_constraintStart_toStartOf="@+id/iv_movie_poster" />

            <TextView
                android:id="@+id/tv_movie_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/normal"
                android:layout_marginEnd="@dimen/normal"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/movie_title"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/tv_movie_year"
                app:layout_constraintEnd_toEndOf="@+id/iv_movie_poster"
                app:layout_constraintStart_toStartOf="@+id/iv_movie_poster" />

            <TextView
                android:id="@+id/tv_movie_year"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/_2020"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/tv_movie_title"
                app:layout_constraintStart_toStartOf="@+id/tv_movie_title" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>